fixed scroll issue(the page was stuck)

--- a/Project_2.O/frontend/car_service_app/src/Components/Shared/SharedCSS/LandingPage.css
+++ b/Project_2.O/frontend/car_service_app/src/Components/Shared/SharedCSS/LandingPage.css
@@ -1,5 +1,5 @@
 .landing-container {
-  height: 100dvh;
+  height: 100vh;
   width: 100%;
   background: url("https://images.unsplash.com/photo-1503376780353-7e6692767b70")
     no-repeat center center/cover;
