--- a/Project_2.O/frontend/car_service_app/src/StyleSheets/Customer/CustomerLogin.css
+++ b/Project_2.O/frontend/car_service_app/src/StyleSheets/Customer/CustomerLogin.css
@@ -35,7 +35,7 @@ body {
 
   /* IMPORTANT FIX */
   box-sizing: border-box;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 /* Top register link */
