--- a/Project_2.O/frontend/car_service_app/src/StyleSheets/Customer/DisplayVendorServices.css
+++ b/Project_2.O/frontend/car_service_app/src/StyleSheets/Customer/DisplayVendorServices.css
@@ -20,7 +20,7 @@ h1 {
   width: 100%;
   background: white;
   border-radius: 14px;
-  overflow: hidden;
+  /* overflow: hidden; */
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
 
   display: flex;
