--- a/Project_2.O/frontend/car_service_app/src/StyleSheets/Customer/HomePage.css
+++ b/Project_2.O/frontend/car_service_app/src/StyleSheets/Customer/HomePage.css
@@ -4,7 +4,7 @@
 
 .home {
   background: white;
-  min-height: 100dvh;
+  min-height: 100vh;
   padding: 10px;
   color:#0f172a;
   font-family: "Poppins", sans-serif;
